@@ -1,0 +1,12 @@
+/*
+   $Id$
+*/
+
+#ifndef __PWSTR_H_
+   #define __PWSTR_H_
+
+int pw_strength(const char *);
+const char *pw_strength_error(void);
+const char *pw_strength_policy(void);
+
+#endif
